--- a/package.json
+++ b/package.json
@@ -7,12 +7,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
-    "morgan": "~1.9.1"
+    "express": "~4.16.1"
   },
   "scripts": {
     "start": "node ./webserver/bin/www"
