switch to template alb https config

--- a/.ebextensions/http-to-https-redirect-elb.config
+++ b/.ebextensions/http-to-https-redirect-elb.config
@@ -41,7 +41,7 @@ Resources:
     Type: 'AWS::ElasticLoadBalancingV2::Listener'
     Properties:
       Certificates:
-        - CertificateArn: Replace with Certificate ARN
+        - CertificateArn: arn:aws:acm:ap-southeast-1:739973801493:certificate/19916c45-4e67-4228-8ad0-73e7bd4c4a89
       DefaultActions:
         - Type: forward
           TargetGroupArn:
