add root certificate arn to ebextensions

--- a/.ebextensions/http-to-https-redirect-elb.config
+++ b/.ebextensions/http-to-https-redirect-elb.config
@@ -42,6 +42,7 @@ Resources:
     Properties:
       Certificates:
         - CertificateArn: arn:aws:acm:ap-southeast-1:739973801493:certificate/19916c45-4e67-4228-8ad0-73e7bd4c4a89
+        - CertificateArn: arn:aws:acm:ap-southeast-1:739973801493:certificate/237ff00d-8bb7-4984-a12f-d02ad721e7c2
       DefaultActions:
         - Type: forward
           TargetGroupArn:
