--- a/wedding-fe/package.json
+++ b/wedding-fe/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "hammerjs": "^2.0.8",
     "ng-gallery": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
