install vanilla js page-flip lib

--- a/wedding-fe/package.json
+++ b/wedding-fe/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~12.2.0",
     "hammerjs": "^2.0.8",
     "ng-gallery": "^5.0.0",
+    "page-flip": "^2.0.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
